# configguard

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: README.md
examples/configs/: invalid-deployment.yaml  service1.yaml  unrelated.txt
examples/directory-validation/: schema.yaml  service2.json
examples/simple/: invalid-config.json  invalid-config.yaml  valid-config.json  valid-config.yaml
src/: cli.rs  config.rs  error.rs  main.rs  reporting.rs  schema.rs  validation.rs
tests/: integration_test.rs
